--- a/src/components/MoviesList/MovieList.css
+++ b/src/components/MoviesList/MovieList.css
@@ -1,16 +1,23 @@
 .movie__list {
-    padding: 0 3rem 3rem 3rem;
+  padding: 0 3rem 3rem 3rem;
 }
 
 .list__title {
-font-size: 1.75rem;
-margin:  2.5rem;
+  font-size: 1.75rem;
+  margin: 2.5rem;
 }
 
 .list__cards {
-    display: flex;
-    flex-wrap: wrap ;
-    justify-content: left;
-    gap: 20px;
-    margin-left: 1.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
+  gap: 20px;
+  margin-left: 1.5rem;
+}
+@media screen and (max-width: 768px) {
+  .list__cards {
+    justify-content: center;
+    gap: 10px;
+    margin-left: 0;
+  }
 }
