--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -29,18 +29,73 @@
   margin-bottom: 0.4rem;
   text-align: left;
 }
-.runtime{
-    font-size: 2rem;
-    margin-bottom: 1rem;
+.runtime {
+  font-size: 2rem;
+  margin-bottom: 1rem;
 }
-.rating{
-    margin-left: 3rem;
+.rating {
+  margin-left: 3rem;
 }
-.description{
-    font-style: italic;
-    font-size: 1rem;
-    margin-bottom: 0.25rem;
-    display: flex;
+.description {
+  font-size: 1rem;
+  margin-bottom: 0.25rem;
+  display: flex;
+  text-align: left;
+  width: 50%;
+}
+@media (max-width:480px) {
+  .image {
+    width: 100%;
+    object-fit: cover;
+  }
+  .title {
+    font-size: 0.5rem;
+    margin-bottom: 0.1rem;
+  }
+  .runtime {
+    font-size: 0.5rem;
+    margin-bottom: 0.1rem;
+  }
+  .rating {
+    margin-left: 1.5rem;
+  }
+  .description {
+    font-size: 0.3rem;
+    width: 60%;
     text-align: left;
-    width: 50%;
+  }
+  .image-overlay {
+    height: auto;
+    padding: 4rem;
+    width: auto;
+  }
+  .image-overlay .title {
+    font-size: 1rem;
+    margin-bottom: 0.1rem;
+    text-align: left;
+  }
+  .hero .Image {
+    height: auto;
+  }
+}
+@media (min-width:481px) and (max-width:768px){
+  .image-overlay .title{
+    font-size: 2rem;
+    margin-bottom: .1rem;
+  }
+  .runtime {
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+  }
+  .rating {
+    margin-left: 1rem;
+  }
+  .description {
+    font-size: .6rem;
+    width: 70%;
+    text-align: left;
+  }
+  .hero .Image {
+    height: auto;
+  }
 }
