--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -45,9 +45,34 @@
 .header a:hover::before {
   width: 100%;
 }
-header{
-  padding: 20px;
+.sign-in-button,
+.user-button {
+  padding: 5px 10px;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.sign-in-button {
   background-color: #ff914d;
+}
+
+.sign-in-button:hover {
+  background-color: #f87a2b;
+  transform: scale(1.05);
+}
+
+.user-button {
+  background-color: #28a745;
+}
+
+.user-button:hover {
+  background-color: #1e7e34;
+  transform: scale(1.05);
 }
 @media (max-width: 480px)  {
   .header a {
@@ -59,6 +84,11 @@ header{
   .header {
     margin: 0 1rem;
   }
+  .sign-in-button,
+  .user-button {
+    font-size: 10px;
+    padding: 6px 12px;
+  }
 }
 @media (max-width: 768px) and (min-width:481px){
   .header a {
@@ -69,6 +99,11 @@ header{
   }
   .header {
     margin: 0 1rem;
+  }
+  .sign-in-button,
+  .user-button {
+    font-size: 12px;
+    padding: 8px 16px;
   }
   
 }
