--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -84,10 +84,9 @@
   .header {
     margin: 0 1rem;
   }
-  .sign-in-button,
-  .user-button {
-    font-size: 10px;
-    padding: 6px 12px;
+  .sign-in-button {
+    font-size: 8px;
+    padding: 5px 9px;
   }
 }
 @media (max-width: 768px) and (min-width:481px){
