--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -65,9 +65,8 @@
     text-align: left;
   }
   .image-overlay {
-    height: auto;
+    height: 100%;
     padding: 4rem;
-    width: auto;
   }
   .image-overlay .title {
     font-size: 1rem;
