--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -98,3 +98,21 @@
     height: auto;
   }
 }
+@media (max-width:1024px) and (min-width:769px) {
+  .description {
+    font-size: 1rem;
+    width: 60%;
+    text-align: left;
+  }
+  .image-overlay .title{
+    font-size: 3rem;
+    margin-bottom: .1rem;
+  }
+  .runtime {
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
+  }
+  .rating {
+    margin-left: 1.5rem;
+  }
+}
