--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -65,8 +65,8 @@
     text-align: left;
   }
   .image-overlay {
-    height: 100%;
-    padding: 4rem;
+    height: 20%;
+    padding: 5rem 2rem;
   }
   .image-overlay .title {
     font-size: 1rem;
