--- a/src/pages/MovieDetails/MovieDetails.css
+++ b/src/pages/MovieDetails/MovieDetails.css
@@ -1,124 +1,189 @@
 .movie {
-    width: 100%;
-    position: relative;
-    display: flex;
-    flex-direction:column;
-    align-items: center;
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .movie__intro {
-    width: 80%;
+  width: 80%;
 }
 
 .movie__backdrop {
-    width: 100%;
-    height: 500px;
-    object-fit:cover;
-    object-position: 0 35%;
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+  object-position: 0 35%;
 }
 
 .movie__detail {
-    align-items: center;
-    width: 75%;
-    display: flex;
-    position: relative;
-    bottom: 225px;
+  align-items: center;
+  width: 75%;
+  display: flex;
+  position: relative;
+  bottom: 225px;
 }
 
 .movie__detailLeft {
-    margin-right: 30px;
+  margin-right: 30px;
 }
 
 .movie__poster {
-    width:300px;
-    border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.86) 0px 22px 40px 6px;
+  width: 300px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.86) 0px 22px 40px 6px;
 }
 
 .movie__detailRight {
-    color: white;
-    display: flex;
-    flex-direction: column;
-    height: 450px;
-    justify-content:space-between ;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  height: 450px;
+  justify-content: space-between;
 }
 
-.movie__detailRightTop > div{
-    text-shadow: 0px 0px 5px #000000;
-    margin-bottom: .5rem;
+.movie__detailRightTop > div {
+  text-shadow: 0px 0px 5px #000000;
+  margin-bottom: 0.5rem;
 }
 
 .movie__name {
-    font-weight: 600;
-    font-size: 3rem;
+  font-weight: 600;
+  font-size: 3rem;
 }
 
 .movie__voteCount {
-    margin-left: 1rem;
+  margin-left: 1rem;
 }
 
 .movie__genres {
-    margin: 1.25rem 0;
+  margin: 1.25rem 0;
 }
 
 .movie__genre {
-    padding: .5rem;
-    border: 2px solid white;
-    border-radius: 20px;
-    margin-right: 1rem;
+  padding: 0.5rem;
+  border: 2px solid white;
+  border-radius: 20px;
+  margin-right: 1rem;
 }
 
-
 .movie__detailRightBottom {
-    margin: 2rem 0;
-    flex: 0.8;
+  margin: 2rem 0;
+  flex: 0.8;
 }
 
 .synopsisText {
-    font-size: 1.5rem;
-    margin-bottom: 1.25rem;
-    font-weight: 600;
-    display: flex;
-    position: relative;
-    align-items: center;
+  font-size: 1.5rem;
+  margin-bottom: 1.25rem;
+  font-weight: 600;
+  display: flex;
+  position: relative;
+  align-items: center;
 }
 .synopsisText > div:last-of-type {
-    margin-left: auto;
+  margin-left: auto;
 }
 
 .movie__links {
-    position: relative;
-    bottom: 120px;
-    display: flex;
-    justify-content: space-between;
-    width: 75%;
+  position: relative;
+  bottom: 120px;
+  display: flex;
+  justify-content: space-between;
+  width: 75%;
 }
 
 .movie__heading {
-    font-size: 2.2rem;
+  font-size: 2.2rem;
 }
 
 .movie__Button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0.8rem 2rem;
-    border-radius: 20px;
-    cursor: pointer;
-    width: 150px;
-    color: black;
-    font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.8rem 2rem;
+  border-radius: 20px;
+  cursor: pointer;
+  width: 150px;
+  color: black;
+  font-weight: bold;
 }
 
 .movie__homeButton {
-    background-color:#ff914d;
-    
+  background-color: #ff914d;
 }
 
 .movie__imdbButton {
-    background-color:#f3ce13;
+  background-color: #f3ce13;
 }
 
 .newTab {
-    margin-left: 1.4rem;
+  margin-left: 1.4rem;
 }
+@media (min-width:610px) and (max-width: 768px) {
+  .movie__backdrop {
+    height: 400px;
+    width: 100%;
+    object-fit: contain;
+    object-position: 0 20%;
+  }
+  .movie__heading{
+    font-size: 1.5rem;
+  }
+  .movie{
+    font-size: 10px;
+  }
+}
+@media (max-width: 600px) {
+  .movie {
+    font-size: 5px;
+  }
+  .movie__backdrop {
+    height: 300px;
+    width: 100%;
+    object-fit: contain;
+    object-position: 0 13%;
+  }
+  .movie__poster {
+    width: 120px;
+  }
+  .movie__name {
+    font-size: 1rem;
+  }
+  .movie__detailRight {
+    height: 250px;
+  }
+  .synopsisText {
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+  }
+  .movie__heading {
+    font-size: 0.6rem;
+  }
+  .movie__links {
+    width: 80%;
+    bottom: 140px;
+  }
+  .movie__Button {
+    border-radius: 20px;
+    width: 50px;
+    font-size: 7px;
+    padding: 1rem;
+    padding: 0.4rem 1.5rem;
+  }
+  .movie__genre {
+    padding: 0.3rem;
+    margin-right: 0.5rem;
+  }
+  .movie__detailRightTop > div {
+    margin-bottom: 0.3rem;
+  }
+  .newTab {
+    margin-left: 0.7rem;
+  }
+  .movie__detailRightBottom {
+    margin: 0.3rem 0;
+    flex: 0.8;
+  }
+}
+
