--- a/src/pages/MovieDetails/MovieDetails.css
+++ b/src/pages/MovieDetails/MovieDetails.css
@@ -1,4 +1,4 @@
-.movie {
+.movie-container {
   width: 100%;
   position: relative;
   display: flex;
@@ -6,18 +6,18 @@
   align-items: center;
 }
 
-.movie__intro {
+.movie-intro {
   width: 80%;
 }
 
-.movie__backdrop {
+.movie-backdrop {
   width: 100%;
   height: 500px;
   object-fit: cover;
   object-position: 0 35%;
 }
 
-.movie__detail {
+.movie-details {
   align-items: center;
   width: 75%;
   display: flex;
@@ -25,17 +25,17 @@
   bottom: 225px;
 }
 
-.movie__detailLeft {
+.movie-details-left {
   margin-right: 30px;
 }
 
-.movie__poster {
+.movie-poster {
   width: 300px;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.86) 0px 22px 40px 6px;
 }
 
-.movie__detailRight {
+.movie-details-right {
   color: white;
   display: flex;
   flex-direction: column;
@@ -43,43 +43,43 @@
   justify-content: space-between;
 }
 
-.movie__detailRightTop > div {
+.movie-details-top > div {
   text-shadow: 0px 0px 5px #000000;
   margin-bottom: 0.5rem;
 }
 
-.movie__name {
+.movie-title {
   font-weight: 600;
   font-size: 3rem;
 }
 
-.movie__voteCount {
+.movie-vote-count {
   margin-left: 1rem;
 }
 
-.movie__genres {
+.movie-genres {
   margin: 1.25rem 0;
   display: flex;
   align-items: center;
   flex-wrap: wrap;
   line-height: 10px;
   width: 100%;
-  gap:2px;
+  gap: 2px;
 }
 
-.movie__genre {
+.movie-genre {
   padding: 0.6rem;
   border: 2px solid white;
   border-radius: 20px;
   margin-right: 1rem;
 }
 
-.movie__detailRightBottom {
+.movie-details-bottom {
   margin: 2rem 0;
   flex: 0.8;
 }
 
-.synopsisText {
+.synopsis-title {
   font-size: 1.5rem;
   margin-bottom: 1.25rem;
   font-weight: 600;
@@ -87,11 +87,12 @@
   position: relative;
   align-items: center;
 }
-.synopsisText > div:last-of-type {
+
+.synopsis-title > div:last-of-type {
   margin-left: auto;
 }
 
-.movie__links {
+.movie-links {
   position: relative;
   bottom: 100px;
   display: flex;
@@ -99,11 +100,11 @@
   width: 75%;
 }
 
-.movie__heading {
+.movie-links-heading {
   font-size: 2.2rem;
 }
 
-.movie__Button {
+.movie-action-button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -115,106 +116,14 @@
   font-weight: bold;
 }
 
-.movie__homeButton {
+.movie-home-button {
   background-color: #ff914d;
 }
 
-.movie__imdbButton {
+.movie-imdb-button {
   background-color: #f3ce13;
 }
-.newTab {
+
+.new-tab {
   margin-left: 1.4rem;
 }
-@media (min-width:769px) and (max-width: 1024px) {
-  .movie__links {
-    bottom: 35px;
-  }
-  .movie__genre{
-    padding: 0.7rem;
-    margin-right: 0.4rem;
-  }
-  .movie__genres{
-    width: 500px;
-  }
-}
-@media (min-width:610px) and (max-width: 768px) {
-  .movie__backdrop {
-    height: 400px;
-    width: 100%;
-    object-fit: contain;
-    object-position: 0 20%;
-  }
-  .movie__heading{
-    font-size: 1.5rem;
-  }
-  .movie{
-    font-size: 10px;
-  }
-  .movie__genres{
-    width: 300px;
-  }
-  .movie__genre {
-    padding: 0.5rem;
-    margin-right: 0.3rem;
-  }
-  .movie__name{
-    font-size: 1.5rem;
-  }
-  .movie__poster {
-    width: 300px;
-  }
-}
-@media (max-width: 600px) {
-  .movie {
-    font-size: 5px;
-  }
-  .movie__backdrop {
-    height: 300px;
-    width: 100%;
-    object-fit: contain;
-    object-position: 0 13%;
-  }
-  .movie__poster {
-    width: 120px;
-  }
-  .movie__name {
-    font-size: 1rem;
-  }
-  .movie__detailRight {
-    height: 250px;
-  }
-  .synopsisText {
-    font-size: 1rem;
-    margin-bottom: 0.5rem;
-  }
-  .movie__heading {
-    font-size: 0.6rem;
-  }
-  .movie__links {
-    width: 80%;
-    bottom: 140px;
-    gap: 5px;
-  }
-  .movie__Button {
-    border-radius: 20px;
-    width: 50px;
-    font-size: 7px;
-    padding: 1rem;
-    padding: 0.4rem 1.5rem;
-  }
-  .movie__genre {
-    padding: 0.2rem;
-    margin-right: 0.3rem;
-  }
-  .movie__detailRightTop > div {
-    margin-bottom: 0.3rem;
-  }
-  .newTab {
-    margin-left: 0.7rem;
-  }
-  .movie__detailRightBottom {
-    margin: 0.3rem 0;
-    flex: 0.8;
-  }
-}
-
