--- a/src/pages/MovieDetails/MovieDetails.css
+++ b/src/pages/MovieDetails/MovieDetails.css
@@ -17,7 +17,7 @@
   object-position: 0 35%;
 }
 
-.movie-details {
+.movie-detail {
   align-items: center;
   width: 75%;
   display: flex;
@@ -25,7 +25,7 @@
   bottom: 225px;
 }
 
-.movie-details-left {
+.movie-detail-left {
   margin-right: 30px;
 }
 
@@ -35,7 +35,7 @@
   box-shadow: rgba(0, 0, 0, 0.86) 0px 22px 40px 6px;
 }
 
-.movie-details-right {
+.movie-detail-right {
   color: white;
   display: flex;
   flex-direction: column;
@@ -43,12 +43,12 @@
   justify-content: space-between;
 }
 
-.movie-details-top > div {
+.movie-detail-right-top > div {
   text-shadow: 0px 0px 5px #000000;
   margin-bottom: 0.5rem;
 }
 
-.movie-title {
+.movie-name {
   font-weight: 600;
   font-size: 3rem;
 }
@@ -74,12 +74,12 @@
   margin-right: 1rem;
 }
 
-.movie-details-bottom {
+.movie-detail-right-bottom {
   margin: 2rem 0;
   flex: 0.8;
 }
 
-.synopsis-title {
+.synopsis-text {
   font-size: 1.5rem;
   margin-bottom: 1.25rem;
   font-weight: 600;
@@ -88,7 +88,7 @@
   align-items: center;
 }
 
-.synopsis-title > div:last-of-type {
+.synopsis-text > div:last-of-type {
   margin-left: auto;
 }
 
@@ -100,11 +100,11 @@
   width: 75%;
 }
 
-.movie-links-heading {
+.movie-heading {
   font-size: 2.2rem;
 }
 
-.movie-action-button {
+.movie-button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -127,3 +127,97 @@
 .new-tab {
   margin-left: 1.4rem;
 }
+@media (min-width: 769px) and (max-width: 1024px) {
+  .movie-links {
+    bottom: 35px;
+  }
+  .movie-genre {
+    padding: 0.7rem;
+    margin-right: 0.4rem;
+  }
+  .movie-genres {
+    width: 500px;
+  }
+}
+
+@media (min-width: 610px) and (max-width: 768px) {
+  .movie-backdrop {
+    height: 400px;
+    width: 100%;
+    object-fit: contain;
+    object-position: 0 20%;
+  }
+  .movie-heading {
+    font-size: 1.5rem;
+  }
+  .movie-container {
+    font-size: 10px;
+  }
+  .movie-genres {
+    width: 300px;
+  }
+  .movie-genre {
+    padding: 0.5rem;
+    margin-right: 0.3rem;
+  }
+  .movie-name {
+    font-size: 1.5rem;
+  }
+  .movie-poster {
+    width: 300px;
+  }
+}
+
+@media (max-width: 600px) {
+  .movie-container {
+    font-size: 5px;
+  }
+  .movie-backdrop {
+    height: 300px;
+    width: 100%;
+    object-fit: contain;
+    object-position: 0 13%;
+  }
+  .movie-poster {
+    width: 120px;
+  }
+  .movie-name {
+    font-size: 1rem;
+  }
+  .movie-detail-right {
+    height: 250px;
+  }
+  .synopsis-text {
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+  }
+  .movie-heading {
+    font-size: 0.6rem;
+  }
+  .movie-links {
+    width: 80%;
+    bottom: 140px;
+    gap: 5px;
+  }
+  .movie-button {
+    border-radius: 20px;
+    width: 50px;
+    font-size: 7px;
+    padding: 0.4rem 1.5rem;
+  }
+  .movie-genre {
+    padding: 0.2rem;
+    margin-right: 0.3rem;
+  }
+  .movie-detail-right-top > div {
+    margin-bottom: 0.3rem;
+  }
+  .new-tab {
+    margin-left: 0.7rem;
+  }
+  .movie-detail-right-bottom {
+    margin: 0.3rem 0;
+    flex: 0.8;
+  }
+}
+
