--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -149,7 +149,7 @@
 }
 @media (min-width:1026px) {
   .header a {
-    font-size: 1rem;
+    font-size: .9rem;
     text-decoration: none;
     padding: 10px;
     transition: color 0.3s ease;
